test/parser.out
Grammar:

Rule 0     S' -> ans
Rule 1     ans -> SEV name sev
Rule 2     ans -> name exposures layers SEV sev freq
Rule 3     ans -> name builtin_aggregate
Rule 4     freq -> <empty>
Rule 5     freq -> POISSON
Rule 6     freq -> FIXED
Rule 7     freq -> MIXED ids numbers
Rule 8     freq -> MIXED ids numbers numbers
Rule 9     sev -> builtinids
Rule 10    sev -> ids numbers numbers weights xps
Rule 11    sev -> ids numbers weights
Rule 12    sev -> ids numbers CV numbers weights
Rule 13    sev -> numbers TIMES sev  [precedence=left, level=2]
Rule 14    sev -> sev MINUS numbers  [precedence=left, level=1]
Rule 15    sev -> sev PLUS numbers  [precedence=left, level=1]
Rule 16    xps -> <empty>
Rule 17    xps -> XPS numbers numbers
Rule 18    weights -> <empty>
Rule 19    weights -> WEIGHTS numbers
Rule 20    layers -> <empty>
Rule 21    layers -> numbers XS numbers
Rule 22    exposures -> numbers PREMIUM AT numbers
Rule 23    exposures -> numbers PREMIUM AT numbers LR
Rule 24    exposures -> numbers LOSS
Rule 25    exposures -> numbers CLAIMS
Rule 26    builtinids -> BUILTINID
Rule 27    builtinids -> [ builtinidl ]
Rule 28    builtinidl -> BUILTINID
Rule 29    builtinidl -> builtinidl BUILTINID
Rule 30    ids -> ID
Rule 31    ids -> [ idl ]
Rule 32    idl -> ID
Rule 33    idl -> idl ID
Rule 34    numbers -> NUMBER
Rule 35    numbers -> [ numberl ]
Rule 36    numberl -> NUMBER
Rule 37    numberl -> numberl NUMBER
Rule 38    builtin_aggregate -> BUILTINID
Rule 39    builtin_aggregate -> NUMBER TIMES BUILTINID
Rule 40    builtin_aggregate -> BUILTINID TIMES NUMBER
Rule 41    name -> ID

Terminals, with rules where they appear:

AT                   : 22 23
BUILTINID            : 26 28 29 38 39 40
CLAIMS               : 25
CV                   : 12
FIXED                : 6
ID                   : 30 32 33 41
LOSS                 : 24
LR                   : 23
MINUS                : 14
MIXED                : 7 8
NUMBER               : 34 36 37 39 40
PLUS                 : 15
POISSON              : 5
PREMIUM              : 22 23
SEV                  : 1 2
TIMES                : 13 39 40
WEIGHTS              : 19
XPS                  : 17
XS                   : 21
[                    : 27 31 35
]                    : 27 31 35
error                : 

Nonterminals, with rules where they appear:

ans                  : 0
builtin_aggregate    : 3
builtinidl           : 27 29
builtinids           : 9
exposures            : 2
freq                 : 2
idl                  : 31 33
ids                  : 7 8 10 11 12
layers               : 2
name                 : 1 2 3
numberl              : 35 37
numbers              : 7 8 8 10 10 11 12 12 13 14 15 17 17 19 21 21 22 22 23 23 24 25
sev                  : 1 2 13 14 15
weights              : 10 11 12
xps                  : 10


state 0

    (0) S' -> . ans
    (1) ans -> . SEV name sev
    (2) ans -> . name exposures layers SEV sev freq
    (3) ans -> . name builtin_aggregate
    (41) name -> . ID
    SEV             shift and go to state 2
    ID              shift and go to state 4

    ans                            shift and go to state 1
    name                           shift and go to state 3

state 1

    (0) S' -> ans .


state 2

    (1) ans -> SEV . name sev
    (41) name -> . ID
    ID              shift and go to state 4

    name                           shift and go to state 5

state 3

    (2) ans -> name . exposures layers SEV sev freq
    (3) ans -> name . builtin_aggregate
    (22) exposures -> . numbers PREMIUM AT numbers
    (23) exposures -> . numbers PREMIUM AT numbers LR
    (24) exposures -> . numbers LOSS
    (25) exposures -> . numbers CLAIMS
    (38) builtin_aggregate -> . BUILTINID
    (39) builtin_aggregate -> . NUMBER TIMES BUILTINID
    (40) builtin_aggregate -> . BUILTINID TIMES NUMBER
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    BUILTINID       shift and go to state 9
    NUMBER          shift and go to state 10
    [               shift and go to state 11

    exposures                      shift and go to state 6
    builtin_aggregate              shift and go to state 7
    numbers                        shift and go to state 8

state 4

    (41) name -> ID .
    BUILTINID       reduce using rule 41 (name -> ID .)
    NUMBER          reduce using rule 41 (name -> ID .)
    [               reduce using rule 41 (name -> ID .)
    ID              reduce using rule 41 (name -> ID .)


state 5

    (1) ans -> SEV name . sev
    (9) sev -> . builtinids
    (10) sev -> . ids numbers numbers weights xps
    (11) sev -> . ids numbers weights
    (12) sev -> . ids numbers CV numbers weights
    (13) sev -> . numbers TIMES sev
    (14) sev -> . sev MINUS numbers
    (15) sev -> . sev PLUS numbers
    (26) builtinids -> . BUILTINID
    (27) builtinids -> . [ builtinidl ]
    (30) ids -> . ID
    (31) ids -> . [ idl ]
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    BUILTINID       shift and go to state 16
    [               shift and go to state 17
    ID              shift and go to state 18
    NUMBER          shift and go to state 19

    sev                            shift and go to state 12
    builtinids                     shift and go to state 13
    ids                            shift and go to state 14
    numbers                        shift and go to state 15

state 6

    (2) ans -> name exposures . layers SEV sev freq
    (20) layers -> .
    (21) layers -> . numbers XS numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    SEV             reduce using rule 20 (layers -> .)
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    layers                         shift and go to state 20
    numbers                        shift and go to state 21

state 7

    (3) ans -> name builtin_aggregate .
    $end            reduce using rule 3 (ans -> name builtin_aggregate .)


state 8

    (22) exposures -> numbers . PREMIUM AT numbers
    (23) exposures -> numbers . PREMIUM AT numbers LR
    (24) exposures -> numbers . LOSS
    (25) exposures -> numbers . CLAIMS
    PREMIUM         shift and go to state 22
    LOSS            shift and go to state 23
    CLAIMS          shift and go to state 24


state 9

    (38) builtin_aggregate -> BUILTINID .
    (40) builtin_aggregate -> BUILTINID . TIMES NUMBER
    $end            reduce using rule 38 (builtin_aggregate -> BUILTINID .)
    TIMES           shift and go to state 25


state 10

    (39) builtin_aggregate -> NUMBER . TIMES BUILTINID
    (34) numbers -> NUMBER .
    TIMES           shift and go to state 26
    PREMIUM         reduce using rule 34 (numbers -> NUMBER .)
    LOSS            reduce using rule 34 (numbers -> NUMBER .)
    CLAIMS          reduce using rule 34 (numbers -> NUMBER .)


state 11

    (35) numbers -> [ . numberl ]
    (36) numberl -> . NUMBER
    (37) numberl -> . numberl NUMBER
    NUMBER          shift and go to state 28

    numberl                        shift and go to state 27

state 12

    (1) ans -> SEV name sev .
    (14) sev -> sev . MINUS numbers
    (15) sev -> sev . PLUS numbers
    $end            reduce using rule 1 (ans -> SEV name sev .)
    MINUS           shift and go to state 29
    PLUS            shift and go to state 30


state 13

    (9) sev -> builtinids .
    MINUS           reduce using rule 9 (sev -> builtinids .)
    PLUS            reduce using rule 9 (sev -> builtinids .)
    $end            reduce using rule 9 (sev -> builtinids .)
    POISSON         reduce using rule 9 (sev -> builtinids .)
    FIXED           reduce using rule 9 (sev -> builtinids .)
    MIXED           reduce using rule 9 (sev -> builtinids .)


state 14

    (10) sev -> ids . numbers numbers weights xps
    (11) sev -> ids . numbers weights
    (12) sev -> ids . numbers CV numbers weights
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 31

state 15

    (13) sev -> numbers . TIMES sev
    TIMES           shift and go to state 32


state 16

    (26) builtinids -> BUILTINID .
    MINUS           reduce using rule 26 (builtinids -> BUILTINID .)
    PLUS            reduce using rule 26 (builtinids -> BUILTINID .)
    $end            reduce using rule 26 (builtinids -> BUILTINID .)
    POISSON         reduce using rule 26 (builtinids -> BUILTINID .)
    FIXED           reduce using rule 26 (builtinids -> BUILTINID .)
    MIXED           reduce using rule 26 (builtinids -> BUILTINID .)


state 17

    (27) builtinids -> [ . builtinidl ]
    (31) ids -> [ . idl ]
    (35) numbers -> [ . numberl ]
    (28) builtinidl -> . BUILTINID
    (29) builtinidl -> . builtinidl BUILTINID
    (32) idl -> . ID
    (33) idl -> . idl ID
    (36) numberl -> . NUMBER
    (37) numberl -> . numberl NUMBER
    BUILTINID       shift and go to state 35
    ID              shift and go to state 36
    NUMBER          shift and go to state 28

    builtinidl                     shift and go to state 33
    idl                            shift and go to state 34
    numberl                        shift and go to state 27

state 18

    (30) ids -> ID .
    NUMBER          reduce using rule 30 (ids -> ID .)
    [               reduce using rule 30 (ids -> ID .)


state 19

    (34) numbers -> NUMBER .
    TIMES           reduce using rule 34 (numbers -> NUMBER .)
    XS              reduce using rule 34 (numbers -> NUMBER .)
    CV              reduce using rule 34 (numbers -> NUMBER .)
    NUMBER          reduce using rule 34 (numbers -> NUMBER .)
    [               reduce using rule 34 (numbers -> NUMBER .)
    WEIGHTS         reduce using rule 34 (numbers -> NUMBER .)
    MINUS           reduce using rule 34 (numbers -> NUMBER .)
    PLUS            reduce using rule 34 (numbers -> NUMBER .)
    $end            reduce using rule 34 (numbers -> NUMBER .)
    POISSON         reduce using rule 34 (numbers -> NUMBER .)
    FIXED           reduce using rule 34 (numbers -> NUMBER .)
    MIXED           reduce using rule 34 (numbers -> NUMBER .)
    XPS             reduce using rule 34 (numbers -> NUMBER .)
    SEV             reduce using rule 34 (numbers -> NUMBER .)
    LR              reduce using rule 34 (numbers -> NUMBER .)


state 20

    (2) ans -> name exposures layers . SEV sev freq
    SEV             shift and go to state 37


state 21

    (21) layers -> numbers . XS numbers
    XS              shift and go to state 38


state 22

    (22) exposures -> numbers PREMIUM . AT numbers
    (23) exposures -> numbers PREMIUM . AT numbers LR
    AT              shift and go to state 39


state 23

    (24) exposures -> numbers LOSS .
    NUMBER          reduce using rule 24 (exposures -> numbers LOSS .)
    [               reduce using rule 24 (exposures -> numbers LOSS .)
    SEV             reduce using rule 24 (exposures -> numbers LOSS .)


state 24

    (25) exposures -> numbers CLAIMS .
    NUMBER          reduce using rule 25 (exposures -> numbers CLAIMS .)
    [               reduce using rule 25 (exposures -> numbers CLAIMS .)
    SEV             reduce using rule 25 (exposures -> numbers CLAIMS .)


state 25

    (40) builtin_aggregate -> BUILTINID TIMES . NUMBER
    NUMBER          shift and go to state 40


state 26

    (39) builtin_aggregate -> NUMBER TIMES . BUILTINID
    BUILTINID       shift and go to state 41


state 27

    (35) numbers -> [ numberl . ]
    (37) numberl -> numberl . NUMBER
    ]               shift and go to state 42
    NUMBER          shift and go to state 43


state 28

    (36) numberl -> NUMBER .
    ]               reduce using rule 36 (numberl -> NUMBER .)
    NUMBER          reduce using rule 36 (numberl -> NUMBER .)


state 29

    (14) sev -> sev MINUS . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 44

state 30

    (15) sev -> sev PLUS . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 45

state 31

    (10) sev -> ids numbers . numbers weights xps
    (11) sev -> ids numbers . weights
    (12) sev -> ids numbers . CV numbers weights
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    (18) weights -> .
    (19) weights -> . WEIGHTS numbers
    CV              shift and go to state 48
    NUMBER          shift and go to state 19
    [               shift and go to state 11
    MINUS           reduce using rule 18 (weights -> .)
    PLUS            reduce using rule 18 (weights -> .)
    $end            reduce using rule 18 (weights -> .)
    POISSON         reduce using rule 18 (weights -> .)
    FIXED           reduce using rule 18 (weights -> .)
    MIXED           reduce using rule 18 (weights -> .)
    WEIGHTS         shift and go to state 49

    numbers                        shift and go to state 46
    weights                        shift and go to state 47

state 32

    (13) sev -> numbers TIMES . sev
    (9) sev -> . builtinids
    (10) sev -> . ids numbers numbers weights xps
    (11) sev -> . ids numbers weights
    (12) sev -> . ids numbers CV numbers weights
    (13) sev -> . numbers TIMES sev
    (14) sev -> . sev MINUS numbers
    (15) sev -> . sev PLUS numbers
    (26) builtinids -> . BUILTINID
    (27) builtinids -> . [ builtinidl ]
    (30) ids -> . ID
    (31) ids -> . [ idl ]
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    BUILTINID       shift and go to state 16
    [               shift and go to state 17
    ID              shift and go to state 18
    NUMBER          shift and go to state 19

    numbers                        shift and go to state 15
    sev                            shift and go to state 50
    builtinids                     shift and go to state 13
    ids                            shift and go to state 14

state 33

    (27) builtinids -> [ builtinidl . ]
    (29) builtinidl -> builtinidl . BUILTINID
    ]               shift and go to state 51
    BUILTINID       shift and go to state 52


state 34

    (31) ids -> [ idl . ]
    (33) idl -> idl . ID
    ]               shift and go to state 53
    ID              shift and go to state 54


state 35

    (28) builtinidl -> BUILTINID .
    ]               reduce using rule 28 (builtinidl -> BUILTINID .)
    BUILTINID       reduce using rule 28 (builtinidl -> BUILTINID .)


state 36

    (32) idl -> ID .
    ]               reduce using rule 32 (idl -> ID .)
    ID              reduce using rule 32 (idl -> ID .)


state 37

    (2) ans -> name exposures layers SEV . sev freq
    (9) sev -> . builtinids
    (10) sev -> . ids numbers numbers weights xps
    (11) sev -> . ids numbers weights
    (12) sev -> . ids numbers CV numbers weights
    (13) sev -> . numbers TIMES sev
    (14) sev -> . sev MINUS numbers
    (15) sev -> . sev PLUS numbers
    (26) builtinids -> . BUILTINID
    (27) builtinids -> . [ builtinidl ]
    (30) ids -> . ID
    (31) ids -> . [ idl ]
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    BUILTINID       shift and go to state 16
    [               shift and go to state 17
    ID              shift and go to state 18
    NUMBER          shift and go to state 19

    sev                            shift and go to state 55
    builtinids                     shift and go to state 13
    ids                            shift and go to state 14
    numbers                        shift and go to state 15

state 38

    (21) layers -> numbers XS . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 56

state 39

    (22) exposures -> numbers PREMIUM AT . numbers
    (23) exposures -> numbers PREMIUM AT . numbers LR
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 57

state 40

    (40) builtin_aggregate -> BUILTINID TIMES NUMBER .
    $end            reduce using rule 40 (builtin_aggregate -> BUILTINID TIMES NUMBER .)


state 41

    (39) builtin_aggregate -> NUMBER TIMES BUILTINID .
    $end            reduce using rule 39 (builtin_aggregate -> NUMBER TIMES BUILTINID .)


state 42

    (35) numbers -> [ numberl ] .
    PREMIUM         reduce using rule 35 (numbers -> [ numberl ] .)
    LOSS            reduce using rule 35 (numbers -> [ numberl ] .)
    CLAIMS          reduce using rule 35 (numbers -> [ numberl ] .)
    TIMES           reduce using rule 35 (numbers -> [ numberl ] .)
    XS              reduce using rule 35 (numbers -> [ numberl ] .)
    CV              reduce using rule 35 (numbers -> [ numberl ] .)
    NUMBER          reduce using rule 35 (numbers -> [ numberl ] .)
    [               reduce using rule 35 (numbers -> [ numberl ] .)
    WEIGHTS         reduce using rule 35 (numbers -> [ numberl ] .)
    MINUS           reduce using rule 35 (numbers -> [ numberl ] .)
    PLUS            reduce using rule 35 (numbers -> [ numberl ] .)
    $end            reduce using rule 35 (numbers -> [ numberl ] .)
    POISSON         reduce using rule 35 (numbers -> [ numberl ] .)
    FIXED           reduce using rule 35 (numbers -> [ numberl ] .)
    MIXED           reduce using rule 35 (numbers -> [ numberl ] .)
    XPS             reduce using rule 35 (numbers -> [ numberl ] .)
    SEV             reduce using rule 35 (numbers -> [ numberl ] .)
    LR              reduce using rule 35 (numbers -> [ numberl ] .)


state 43

    (37) numberl -> numberl NUMBER .
    ]               reduce using rule 37 (numberl -> numberl NUMBER .)
    NUMBER          reduce using rule 37 (numberl -> numberl NUMBER .)


state 44

    (14) sev -> sev MINUS numbers .
    MINUS           reduce using rule 14 (sev -> sev MINUS numbers .)
    PLUS            reduce using rule 14 (sev -> sev MINUS numbers .)
    $end            reduce using rule 14 (sev -> sev MINUS numbers .)
    POISSON         reduce using rule 14 (sev -> sev MINUS numbers .)
    FIXED           reduce using rule 14 (sev -> sev MINUS numbers .)
    MIXED           reduce using rule 14 (sev -> sev MINUS numbers .)


state 45

    (15) sev -> sev PLUS numbers .
    MINUS           reduce using rule 15 (sev -> sev PLUS numbers .)
    PLUS            reduce using rule 15 (sev -> sev PLUS numbers .)
    $end            reduce using rule 15 (sev -> sev PLUS numbers .)
    POISSON         reduce using rule 15 (sev -> sev PLUS numbers .)
    FIXED           reduce using rule 15 (sev -> sev PLUS numbers .)
    MIXED           reduce using rule 15 (sev -> sev PLUS numbers .)


state 46

    (10) sev -> ids numbers numbers . weights xps
    (18) weights -> .
    (19) weights -> . WEIGHTS numbers
    XPS             reduce using rule 18 (weights -> .)
    MINUS           reduce using rule 18 (weights -> .)
    PLUS            reduce using rule 18 (weights -> .)
    $end            reduce using rule 18 (weights -> .)
    POISSON         reduce using rule 18 (weights -> .)
    FIXED           reduce using rule 18 (weights -> .)
    MIXED           reduce using rule 18 (weights -> .)
    WEIGHTS         shift and go to state 49

    weights                        shift and go to state 58

state 47

    (11) sev -> ids numbers weights .
    MINUS           reduce using rule 11 (sev -> ids numbers weights .)
    PLUS            reduce using rule 11 (sev -> ids numbers weights .)
    $end            reduce using rule 11 (sev -> ids numbers weights .)
    POISSON         reduce using rule 11 (sev -> ids numbers weights .)
    FIXED           reduce using rule 11 (sev -> ids numbers weights .)
    MIXED           reduce using rule 11 (sev -> ids numbers weights .)


state 48

    (12) sev -> ids numbers CV . numbers weights
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 59

state 49

    (19) weights -> WEIGHTS . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 60

state 50

    (13) sev -> numbers TIMES sev .
    (14) sev -> sev . MINUS numbers
    (15) sev -> sev . PLUS numbers
    MINUS           reduce using rule 13 (sev -> numbers TIMES sev .)
    PLUS            reduce using rule 13 (sev -> numbers TIMES sev .)
    $end            reduce using rule 13 (sev -> numbers TIMES sev .)
    POISSON         reduce using rule 13 (sev -> numbers TIMES sev .)
    FIXED           reduce using rule 13 (sev -> numbers TIMES sev .)
    MIXED           reduce using rule 13 (sev -> numbers TIMES sev .)


state 51

    (27) builtinids -> [ builtinidl ] .
    MINUS           reduce using rule 27 (builtinids -> [ builtinidl ] .)
    PLUS            reduce using rule 27 (builtinids -> [ builtinidl ] .)
    $end            reduce using rule 27 (builtinids -> [ builtinidl ] .)
    POISSON         reduce using rule 27 (builtinids -> [ builtinidl ] .)
    FIXED           reduce using rule 27 (builtinids -> [ builtinidl ] .)
    MIXED           reduce using rule 27 (builtinids -> [ builtinidl ] .)


state 52

    (29) builtinidl -> builtinidl BUILTINID .
    ]               reduce using rule 29 (builtinidl -> builtinidl BUILTINID .)
    BUILTINID       reduce using rule 29 (builtinidl -> builtinidl BUILTINID .)


state 53

    (31) ids -> [ idl ] .
    NUMBER          reduce using rule 31 (ids -> [ idl ] .)
    [               reduce using rule 31 (ids -> [ idl ] .)


state 54

    (33) idl -> idl ID .
    ]               reduce using rule 33 (idl -> idl ID .)
    ID              reduce using rule 33 (idl -> idl ID .)


state 55

    (2) ans -> name exposures layers SEV sev . freq
    (14) sev -> sev . MINUS numbers
    (15) sev -> sev . PLUS numbers
    (4) freq -> .
    (5) freq -> . POISSON
    (6) freq -> . FIXED
    (7) freq -> . MIXED ids numbers
    (8) freq -> . MIXED ids numbers numbers
    MINUS           shift and go to state 29
    PLUS            shift and go to state 30
    $end            reduce using rule 4 (freq -> .)
    POISSON         shift and go to state 62
    FIXED           shift and go to state 63
    MIXED           shift and go to state 64

    freq                           shift and go to state 61

state 56

    (21) layers -> numbers XS numbers .
    SEV             reduce using rule 21 (layers -> numbers XS numbers .)


state 57

    (22) exposures -> numbers PREMIUM AT numbers .
    (23) exposures -> numbers PREMIUM AT numbers . LR
    NUMBER          reduce using rule 22 (exposures -> numbers PREMIUM AT numbers .)
    [               reduce using rule 22 (exposures -> numbers PREMIUM AT numbers .)
    SEV             reduce using rule 22 (exposures -> numbers PREMIUM AT numbers .)
    LR              shift and go to state 65


state 58

    (10) sev -> ids numbers numbers weights . xps
    (16) xps -> .
    (17) xps -> . XPS numbers numbers
    MINUS           reduce using rule 16 (xps -> .)
    PLUS            reduce using rule 16 (xps -> .)
    $end            reduce using rule 16 (xps -> .)
    POISSON         reduce using rule 16 (xps -> .)
    FIXED           reduce using rule 16 (xps -> .)
    MIXED           reduce using rule 16 (xps -> .)
    XPS             shift and go to state 67

    xps                            shift and go to state 66

state 59

    (12) sev -> ids numbers CV numbers . weights
    (18) weights -> .
    (19) weights -> . WEIGHTS numbers
    MINUS           reduce using rule 18 (weights -> .)
    PLUS            reduce using rule 18 (weights -> .)
    $end            reduce using rule 18 (weights -> .)
    POISSON         reduce using rule 18 (weights -> .)
    FIXED           reduce using rule 18 (weights -> .)
    MIXED           reduce using rule 18 (weights -> .)
    WEIGHTS         shift and go to state 49

    weights                        shift and go to state 68

state 60

    (19) weights -> WEIGHTS numbers .
    MINUS           reduce using rule 19 (weights -> WEIGHTS numbers .)
    PLUS            reduce using rule 19 (weights -> WEIGHTS numbers .)
    $end            reduce using rule 19 (weights -> WEIGHTS numbers .)
    POISSON         reduce using rule 19 (weights -> WEIGHTS numbers .)
    FIXED           reduce using rule 19 (weights -> WEIGHTS numbers .)
    MIXED           reduce using rule 19 (weights -> WEIGHTS numbers .)
    XPS             reduce using rule 19 (weights -> WEIGHTS numbers .)


state 61

    (2) ans -> name exposures layers SEV sev freq .
    $end            reduce using rule 2 (ans -> name exposures layers SEV sev freq .)


state 62

    (5) freq -> POISSON .
    $end            reduce using rule 5 (freq -> POISSON .)


state 63

    (6) freq -> FIXED .
    $end            reduce using rule 6 (freq -> FIXED .)


state 64

    (7) freq -> MIXED . ids numbers
    (8) freq -> MIXED . ids numbers numbers
    (30) ids -> . ID
    (31) ids -> . [ idl ]
    ID              shift and go to state 18
    [               shift and go to state 70

    ids                            shift and go to state 69

state 65

    (23) exposures -> numbers PREMIUM AT numbers LR .
    NUMBER          reduce using rule 23 (exposures -> numbers PREMIUM AT numbers LR .)
    [               reduce using rule 23 (exposures -> numbers PREMIUM AT numbers LR .)
    SEV             reduce using rule 23 (exposures -> numbers PREMIUM AT numbers LR .)


state 66

    (10) sev -> ids numbers numbers weights xps .
    MINUS           reduce using rule 10 (sev -> ids numbers numbers weights xps .)
    PLUS            reduce using rule 10 (sev -> ids numbers numbers weights xps .)
    $end            reduce using rule 10 (sev -> ids numbers numbers weights xps .)
    POISSON         reduce using rule 10 (sev -> ids numbers numbers weights xps .)
    FIXED           reduce using rule 10 (sev -> ids numbers numbers weights xps .)
    MIXED           reduce using rule 10 (sev -> ids numbers numbers weights xps .)


state 67

    (17) xps -> XPS . numbers numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 71

state 68

    (12) sev -> ids numbers CV numbers weights .
    MINUS           reduce using rule 12 (sev -> ids numbers CV numbers weights .)
    PLUS            reduce using rule 12 (sev -> ids numbers CV numbers weights .)
    $end            reduce using rule 12 (sev -> ids numbers CV numbers weights .)
    POISSON         reduce using rule 12 (sev -> ids numbers CV numbers weights .)
    FIXED           reduce using rule 12 (sev -> ids numbers CV numbers weights .)
    MIXED           reduce using rule 12 (sev -> ids numbers CV numbers weights .)


state 69

    (7) freq -> MIXED ids . numbers
    (8) freq -> MIXED ids . numbers numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 72

state 70

    (31) ids -> [ . idl ]
    (32) idl -> . ID
    (33) idl -> . idl ID
    ID              shift and go to state 36

    idl                            shift and go to state 34

state 71

    (17) xps -> XPS numbers . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 73

state 72

    (7) freq -> MIXED ids numbers .
    (8) freq -> MIXED ids numbers . numbers
    (34) numbers -> . NUMBER
    (35) numbers -> . [ numberl ]
    $end            reduce using rule 7 (freq -> MIXED ids numbers .)
    NUMBER          shift and go to state 19
    [               shift and go to state 11

    numbers                        shift and go to state 74

state 73

    (17) xps -> XPS numbers numbers .
    MINUS           reduce using rule 17 (xps -> XPS numbers numbers .)
    PLUS            reduce using rule 17 (xps -> XPS numbers numbers .)
    $end            reduce using rule 17 (xps -> XPS numbers numbers .)
    POISSON         reduce using rule 17 (xps -> XPS numbers numbers .)
    FIXED           reduce using rule 17 (xps -> XPS numbers numbers .)
    MIXED           reduce using rule 17 (xps -> XPS numbers numbers .)


state 74

    (8) freq -> MIXED ids numbers numbers .
    $end            reduce using rule 8 (freq -> MIXED ids numbers numbers .)
